--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -1,5 +1,6 @@
 body{
     background-color:#99d6ff;
+    font-size:20px;
 }
 ul{
     list-style-type: none;
@@ -13,28 +14,47 @@ header .container{
     padding-right:40px;
 }
 header .container button{
-    margin-top:20px;
+    margin-top:10px;
     float: right;
     margin-left:20px;
+   background-color:#99d6ff;
+    height: 40px;
+    width:100px;
+    border-radius:10px;
 }
 #logo{
     height: 60px;
     width:200px;
 }
 #main-container{
-    width:300px;
+    width:400px;
     height: auto;
-    margin:0 auto;
-    border-style:dotted;
+    float: right;
+    margin-right: 88px;
+    /* border-style:dotted;
     border-color:black;
-    border-width:2px;
-   margin-top:100px;
+    border-width:2px; */
+   margin-top:20px;
    margin-bottom:100px;
+   border: 2px dashed #046ca3;
+   border-radius:10px;
+	
 }
 #main-container *{
     margin:10px;
 }
 input{
-    width:200px;
+    width:300px;
+    height: 30px;;
     margin-bottom:20px;
+    border-radius:10px;
+}
+#submit{
+    margin-top:10px;
+    float: left;
+    margin-left:20px;
+    color:white;
+   background-color:#00264d;
+    height: 40px;
+    width:120px;
 }
