--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -19,7 +19,7 @@ header .container button{
     margin-left:20px;
    background-color:#99d6ff;
     height: 40px;
-    width:100px;
+    width:auto;
     border-radius:10px;
 }
 #logo{
