--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -5,3 +5,45 @@
 main .container #additem{
     margin:30px;
 }
+main .container #newItemForm{
+    line-height: 30px;
+   width: 700px;
+   margin: 0 auto;
+   margin-top:60px;
+}
+#newItemForm label{
+    width: 200px;
+    display: inline-block;
+}
+#reminder{
+    vertical-align: text-top;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+}
+table{
+    margin: 10px;
+    
+}
+#customers {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#customers td, #customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}
