reminder date added

--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -44,6 +44,6 @@ table{
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: #00264d;
     color: white;
 }
