--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -22,7 +22,7 @@ main .container #newItemForm{
     background-color: #eee;
 }
 table{
-    margin: 10px;
+ margin-right: 50px;
     
 }
 #customers {
