--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -50,8 +50,6 @@ table{
     width: auto;
 }
 button{
-    /* margin-top:10px;
-    float: left;*/
     margin-left:20px; 
     border-radius:10px;
     color:white;
@@ -61,4 +59,11 @@ button{
 }
 #buttons{
     margin-left: 5%;
+}
+
+#newItemForm{
+    padding: 40px;
+    padding-bottom: 60px;
+     border: 2px dashed #046ca3;
+   border-radius:10px;
 }
