--- a/Assets/css/profile.css
+++ b/Assets/css/profile.css
@@ -1,8 +1,11 @@
 main .profile-container{
     width:500px;
     margin:0 auto;    
-    margin-top:60px;
-
+    margin-top:30px;
+     padding: 30px;
+    padding-bottom: 60px;
+     border: 2px dashed #046ca3;
+   border-radius:10px;
 }
 p{
     font-size:40px;
