--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -1,13 +1,17 @@
 body{
-    background-color:#99d6ff;
+    background-image: url(../images/board_black_line_texture_background_wood_55220_1920x1080.jpg);
     font-size:20px;
+    color:white;
 }
 ul{
     list-style-type: none;
 }
 header{
     height:60px;
-    background-color: #00264d;
+    /*background-color: white;*/
+    /*position: fixed;*/
+    width: 100%;
+    background-color: transparent;
 }
 header .container{
     position: relative;
@@ -37,7 +41,7 @@ header .container button{
     /* border-style:dotted;
     border-color:black;
     border-width:2px; */
-   margin-top:20px;
+   margin-top:80px;
    margin-bottom:100px;
    border: 2px dashed #046ca3;
    border-radius:10px;
@@ -46,20 +50,24 @@ header .container button{
 #main-container *{
     margin:10px;
 }
-#main-container input{
-    width:300px;
-    height: 30px;;
-    margin-bottom:20px;
-    border-radius:10px;
-}
-#submit{
+
+#main-container #submit{
     margin-top:10px;
     float: left;
     margin-left:20px;
     color:white;
    background-color:#00264d;
-    height: 40px;
+    height: 60px;
     width:120px;
+     border-radius:30px;
+     border-bottom-color: white;
+
+}
+#main-container input{
+    width:300px;
+    height: 30px;;
+    margin-bottom:20px;
+    border-radius:10px;
 }
 
 label::after { 
@@ -67,4 +75,7 @@ label::after {
     position: absolute;
     color: red;
     z-index: 10000;
+}
+img{
+    position: fixed;
 }
