--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -1,17 +1,23 @@
 body{
-    background-image: url(../images/board_black_line_texture_background_wood_55220_1920x1080.jpg);
+    background-image: url(../images/ezgif.com-webp-to-jpg.jpg);
     font-size:20px;
-    color:white;
+    color:#2771e8;
+  font-family: 'Slabo 27px', serif;
+}
+input:focus {
+    outline:none !important;
 }
 ul{
     list-style-type: none;
 }
 header{
     height:60px;
-    /*background-color: white;*/
+    background-color: rgba(0, 0, 0, 0.3);
     /*position: fixed;*/
     width: 100%;
-    background-color: transparent;
+  
+    
+    border-radius: 5px;
 }
 header .container{
     position: relative;
@@ -26,6 +32,26 @@ header .container button{
     height: 40px;
     width:auto;
     border-radius:10px;
+     height: 40px;
+    width:auto;
+     border-radius:5px;
+      background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+
+ 
+  color: #ffffff;
+  font-size: 20px;
+ 
+  text-decoration: none;
+}
+main{
+
 }
 #logo{
     position: absolute;
@@ -34,6 +60,7 @@ header .container button{
     
 }
 #main-container{
+     background-color:  rgba(0, 0, 0, 0.2);
     width:400px;
     height: auto;
     float: right;
@@ -43,7 +70,7 @@ header .container button{
     border-width:2px; */
    margin-top:80px;
    margin-bottom:100px;
-   border: 2px dashed #046ca3;
+   /*border: 2px dashed #046ca3;*/
    border-radius:10px;
 	
 }
@@ -51,31 +78,48 @@ header .container button{
     margin:10px;
 }
 
-#main-container #submit{
+#main-container button{
     margin-top:10px;
     float: left;
-    margin-left:20px;
+    margin-left:10px;
     color:white;
    background-color:#00264d;
-    height: 60px;
-    width:120px;
-     border-radius:30px;
-     border-bottom-color: white;
+    height: 50px;
+    width:auto;
+     border-radius:5px;
+      background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+
+  font-family: Courier New;
+  color: #ffffff;
+  font-size: 20px;
+ 
+  text-decoration: none;
 
 }
 #main-container input{
-    width:300px;
-    height: 30px;;
+    width:330px;
+    height: 35px;;
     margin-bottom:20px;
     border-radius:10px;
+    
 }
 
 label::after { 
     content: "*";
     position: absolute;
     color: red;
-    z-index: 10000;
+    z-index: 100;
 }
 img{
-    position: fixed;
+    /*position: fixed;*/
+}
+span{
+    color:red;
 }
