--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -1,7 +1,7 @@
 body{
     background-image: url(../images/ezgif.com-webp-to-jpg.jpg);
     font-size:20px;
-    color:#2771e8;
+    color:#0049d8;
   font-family: 'Slabo 27px', serif;
 }
 input:focus {
