--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -57,6 +57,7 @@ main{
     position: absolute;
     height: 60px;
     width:200px;
+    filter: brightness(2.0);
     
 }
 #main-container{
@@ -71,7 +72,7 @@ main{
    margin-top:80px;
    margin-bottom:100px;
    /*border: 2px dashed #046ca3;*/
-   border-radius:10px;
+   border-radius:5px;
 	
 }
 #main-container *{
@@ -122,4 +123,13 @@ img{
 }
 span{
     color:red;
+}
+h1{
+    margin-top: 50px;
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Rammetto One', cursive;
+    
+    text-shadow: 2px 2px #00264d;
+   
 }
