--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -2,7 +2,7 @@
     float:right;
     margin-right: 40px;
 }
-main .container #additem{
+main .container .ADS{
     margin:30px;
 }
 main .container #newItemForm{
@@ -52,13 +52,6 @@ table{
     width: auto;
       border-radius:5px;
       background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
 
  
   color: #ffffff;
