--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../images/ezgif.com-webp-to-jpg.jpg);
+    background-image: url(../images/image.jpg);
     font-size:20px;
     color:#0049d8;
   font-family: 'Slabo 27px', serif;
